--- a/html/products.html
+++ b/html/products.html
@@ -193,7 +193,7 @@
         <h1 class="fw-light">Products</h1>
         <p class="lead text-body-secondary">FakeStoreApi can be used with any type of shopping project that needs products, carts, and users in JSON format..</p>
         <p>
-          <button class="btn btn-primary my-2">Load Products</button>
+          <button class="btn btn-primary my-2" id="loadProducts">Load Products</button>
         </p>
       </div>
     </div>
@@ -354,6 +354,7 @@
   </div>
 </footer>
 <script src="https://getbootstrap.com/docs/5.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
+<script src="./js/main.js"></script>
 
     </body>
 </html>
